<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Retrieve</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="trouve">Trouvé</string>
    <string name="perdu">Perdu</string>
    <string name="requis">Requis</string>
    <string name="pseudo">Pseudo</string>
    <string name="couleur">Couleur</string>
    <string name="facultatif">Facultatif</string>
  <string name="dateObjet">Date</string>
    <string name="numero_et_rue">Numero et rue</string>
    <string name="code_postal">Code Postal</string>
    <string name="email">Email</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="unknown_error">Erreur inconnue</string>
    <string name="erreurInconnue">Erreur inconnue</string>
    <string name="authreussie">Authentification réussie</string>
    <string name="ajoutObjet">Ajout objet</string>
    <string name="adresse_o_l_objet_a_t_trouv_ou_perdu">Adresse où l\'objet a été trouvé ou perdu</string>
    <string name="ville">Ville</string>
    <string name="ajoutreussi">Ajout réussi</string>
    <string name="type_d_objet">Type d\'objet</string>
    <string name="description">Description</string>
    <string name="photosmax">3 photos maximum</string>
    <string name="recherche">Recherche..</string>
    <string name="prendrePhoto">Prendre Photo</string>
    <string name="gallery">Choisir dans Gallery</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter photos</string>
    <string name="supprimer">Supprimer</string>
    <string name="partager">Partager</string>
    <string name="objets_trouv_s">Objets trouvés</string>
    <string name="objets_perdus">Objets perdus</string>
    <string name="logout">Logout</string>
    <string name="deconnexion">Deconnexion reussie</string>

    <string-array name="Type">
        <item>Clé(s)</item>
        <item>Sac</item>
        <item>Bijou</item>
        <item>Montre</item>
        <item>Portefeuille</item>
        <item>Lunettes</item>
        <item>Vêtement</item>
        <item>Peluche/Doudou</item>
        <item>Téléphone</item>
        <item>Accessoire téléphone</item>
        <item>Autre</item>
    </string-array>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="suppression_compte">Suppression compte</string>
    <string name="deco">Deconnexion</string>
    <string name="suppCompte">Voulez vous supprimer votre compte ?</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="suppannonce">Voulez vous supprimer l\'annonce ?</string>
    <string name="annoncesupp">Annonce supprimée</string>
    <string name="autherror">Erreur d\'authentification</string>
    <string name="errnointernet">Erreur pas de connexion</string>
    <string name="errInconnue">Erreur inconnue</string>
    <string name="trouves">Objets trouvés</string>
    <string name="perdus">Objets perdus</string>
    <string name="suppCpte">Compte supprimé</string>


</resources>