<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityFindLost"
    tools:context=".ui.findLostPage.FindLostActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:boxStrokeColor="@color/colorSecondaryVariant"
            app:boxStrokeErrorColor="#F30505"
            app:errorEnabled="true"
            app:helperText="@string/requis"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:hint="@string/pseudo"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@+id/input_name"
            android:layout_marginStart="40dp"
            app:boxStrokeColor="@color/colorSecondaryVariant"
            app:boxStrokeErrorColor="#F30505"
            app:errorEnabled="true"
            app:helperText="@string/requis"
            app:helperTextEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/et_type"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:clickable="false"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="Type d'objet"
                android:inputType="none"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/input_name"
        app:boxStrokeColor="@color/colorSecondaryVariant"
        app:helperText="@string/facultatif"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_color"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:hint="@string/couleur"
            android:inputType="textAutoComplete"
            android:singleLine="true"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_type"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/input_color"
        app:startIconDrawable="@drawable/baseline_date_range_black_48dp"
        app:boxStrokeColor="@color/colorSecondaryVariant"
        app:boxStrokeErrorColor="#F30505"
        app:errorEnabled="true"
        app:helperText="@string/requis"
        app:helperTextEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="160dp"
            android:layout_height="50dp"

            android:focusableInTouchMode="false"
            android:hint="@string/dateObjet"
            android:inputType="date"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>